# ckan-sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
ckan_server/default/: ckan.ini
scripts/: ckan-setup.sh  pre-install.md
