[project]
name = "ckan-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ckan[requirements]",
    "flask-debugtoolbar>=0.16.0",
]

[tool.uv.sources]
ckan = { git = "https://github.com/ckan/ckan.git", rev = "ckan-2.11.3" }
